apply plugin: 'com.android.library'

android {
    compileSdk 34
    namespace 'com.mifos.mifosxdroid'

    defaultConfig {
        minSdkVersion 17
        targetSdk 34

        compileOptions {
            sourceCompatibility JavaVersion.VERSION_1_8
            targetCompatibility JavaVersion.VERSION_1_8
        }

     /*   lintOptions {
            tasks.lint.enabled = false
            checkReleaseBuilds false
            abortOnError false
        }
*/

            /*javaCompileOptions {
                annotationProcessorOptions {
                    arguments = ["dbflow.incremental": "true"]
                }
            }*/
       /* packagingOptions {
            exclude 'META-INF/services/javax.annotation.processing.Processor'
        }*/
    }

    buildTypes {
        release {
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
        ]

    }


}

repositories {
    mavenCentral()
    google()
    maven {
        url 'http://dl.bintray.com/amulyakhare/maven'
        allowInsecureProtocol = true
    }
    maven { url "https://www.jitpack.io" }
    maven { url 'https://maven.google.com' }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    // DBFlow dependencies
 /*   annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:4.2.4"
    implementation "com.github.Raizlabs.DBFlow:dbflow-core:4.2.4"
    implementation "com.github.Raizlabs.DBFlow:dbflow:4.2.4"*/
    annotationProcessor project (':dbflow-processor')
    implementation project (':dbflow-core')
    implementation project (':dbflow')


    testImplementation 'junit:junit:4.13.2'

    // Dagger dependencies
    annotationProcessor "com.google.dagger:dagger-compiler:2.40.5"
    implementation "com.google.dagger:dagger:2.40.5"

    // Other dependencies...
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation "androidx.core:core-ktx:1.13.1"
    implementation "androidx.recyclerview:recyclerview:1.3.2"
    implementation "androidx.cardview:cardview:1.0.0"
   // implementation "com.google.android.material:material:1.12.0"
    implementation 'com.google.android.material:material:1.12.0'


    implementation "com.jakewharton:butterknife:10.2.3"
    annotationProcessor "com.jakewharton:butterknife-compiler:10.2.3"


    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0' // Scalars Converter
    implementation "com.squareup.retrofit2:retrofit:2.9.0"
    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
    implementation "com.squareup.okhttp3:okhttp:4.12.0"
    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"

    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0' // RxJava3 adapter for Retrofit
    implementation 'io.reactivex.rxjava3:rxjava:3.1.5' // RxJava3 library


    implementation "io.reactivex:rxandroid:1.2.1"
    implementation "io.reactivex:rxjava:1.3.8"

    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    implementation 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.projectlombok:lombok:1.18.34'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    implementation "com.jakewharton.timber:timber:$rootProject.timberVersion"
    implementation "androidx.test.espresso:espresso-idling-resource:3.6.1"


}
